# ai-shoptalk-knowledge-agent

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  concepts-primer.html  pyproject.toml  streamlit_app.py
data/: ground_truth.json  ground_truth_candidates.json  ground_truth_curated.json  ground_truth_draft.json
data/extracted/: attention-is-all-you-need.json  bert-devlin-et-al.json  bert-devlin-et-al.txt  rag-lewis-et-al.json  rag-lewis-et-al.txt  sentence-bert.json  sentence-bert.txt
data/pdfs/: README.md
docs/: PRD.md  learning-journal-day4.md  self-evaluation.md
docs/adr/: ADR-001-faiss-over-chromadb-for-experiment-vector-index.md  (+6 more)
results/: comparison_report.md  iteration_log.json  judge_calibration_input.json  reproducibility_check.json
scripts/: evaluate.py  generate_ground_truth.py  ingest.py  inspect_extraction.py  judge_calibration.py  serve.py
src/: cache.py  experiment_runner.py  extraction.py  factories.py  generator.py  interfaces.py  iteration_log.py  pipeline.py  reporting.py  schemas.py  streamlit_app.py  vector_store.py  visualization.py
tests/: test_cache.py  test_chunkers.py  test_cli.py  test_configs.py  test_embedders.py  test_experiment_runner.py  test_extraction.py  test_factories.py  test_generator.py  test_ground_truth.py  test_integration.py  test_iteration_log.py  test_judge.py  test_metrics.py  test_ollama_embedder.py  test_placeholder.py  test_reporting.py  test_reproducibility.py  test_rerankers.py  test_retrievers.py  test_schemas.py  test_smoke.py  test_streamlit_app.py  test_vector_store.py  test_visualization.py
(+218 files in other folders)
