[project]
name = "shoptalk-knowledge-agent"
version = "0.1.0"
description = "Production RAG system: PDF ingestion, multi-strategy retrieval, LLM generation with citations, and 35+ configuration experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.24.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "rank-bm25>=0.2.2",
    "litellm>=1.40.0",
    "pydantic>=2.0",
    "streamlit>=1.35.0",
    "cohere>=5.0.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "numpy>=1.26.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0.0",
    "instructor>=1.0.0",
    "tiktoken>=0.7.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
